k8s/ai-orchestration-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-orchestration-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai-orchestration

  template:
    metadata:
      labels:
        app: ai-orchestration

    spec:
      containers:
        - name: ai-orchestration
          image: ai-orchestration:v3
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - containerPort: 4000
