k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: router-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: router

  template:
    metadata:
      labels:
        app: router

    spec:
      containers:
        - name: router
          image: sandbox-router:v1
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          ports:
            - containerPort: 3000
