k8s/ai-orchestration-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ai-orchestration

spec:
  selector:
    app: ai-orchestration

  ports:
    - port: 4000
      targetPort: 4000

  type: ClusterIP
