k8s/router-service.yml
apiVersion: v1
kind: Service

metadata:
  name: router-service

spec:
  selector:
    app: router

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
