k8s/sandbox-service.yml
apiVersion: v1
kind: Service

metadata:
  name: sandbox-service

spec:
  selector:
    app: sandbox

  ports:
    - name: api
      port: 3000
      targetPort: 3000

    - name: frontend
      port: 5173
      targetPort: 5173

  type: ClusterIP
