k8s/server-service.yml
apiVersion: v1
kind: Service

metadata:
  name: sandbox-server

spec:
  selector:
    app: sandbox-server

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
