k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: forgeai-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: "*.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router-service
                port:
                  number: 80
