k8s/sandbox-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: sandbox-isolation

spec:
  podSelector:
    matchLabels:
      app: sandbox

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: router
